@@ -57,5 +57,14 @@
 #else
 #define BSS .bss
 #endif
+
+/* Mark non-executable stack.
+   It's mainly for GNU on Linux... who else does (not) like this? */
+#if !defined(__SUNPRO_C) && defined(__linux__) && defined(__ELF__)
+#define NONEXEC_STACK .section .note.GNU-stack,"",%progbits
+#else
+#define NONEXEC_STACK
+#endif
+
 #endif /* !__MANGLE_H */
 
